Document PPDG/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Account 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Officer__c</fullName>
        <label>Account Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Firm__c</fullName>
        <label>Accountant Firm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Phone__c</fullName>
        <label>Accountant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Accountant_PostCode__c</fullName>
        <label>PostCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Town_City__c</fullName>
        <label>Town/City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_name__c</fullName>
        <label>Accountant name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ack_Form_Needed__c</fullName>
        <defaultValue>&quot;X&quot;</defaultValue>
        <label>Ack Form Needed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Statuses__c</fullName>
        <label>Active Statuses</label>
        <picklist>
            <picklistValues>
                <fullName>Active FATCA - Publicly traded NFFE and NFFE affiliates thereof - the entity&apos;s stock is regularly traded on an established securities market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Less than 50% passive income i.e. less than half of the entity&apos;s gross income and assets are passive (Derived from or related to financial assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Entity in liquidation/bankruptcy -the entity was not a FI in the past 5 years and is in liquidation or bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Excepted territory NFFE - an entity organised in possession of the US that does not maintain accounts for third parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Excepted inter-affiliate FI - A FI in a group structure that does not maintain accounts for third parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Start up company - The entity is not yet operating a business and has no operating history, but has intent to operate a non FI business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Non-Financial group entity (holding company, treasury centre or captive finance company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active FATCA - Non-profit or 501c organisation - the entity has been established for religious, charitable, scientific, artistic, cultural or educational purposes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - Regularly traded on an established securities market, or the NFE is a related Entity of an entity the stock of which is regularly traded on an established securities market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE in liquidation - the Entity wasn’t a FI in the last 5 years and is in liquidation (Or its reorganising to restart a business other than FI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE Government entities - the entity is a government, a political subdivision of a government or a wholly owned entity of either</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE Treasury Centre - the Entity mainly carries out financing/hedging transactions with/for non FI related entities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE non profit - the Entity exists for charitable purposes and is exempt from income tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE start up - the Entity isnt yet operating a business and has no operating history, but it plans to run a non FI business (up-to 24 months after its initial setup)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE Holding Company - Nearly all the Entity&apos;s activities consist of holding the stock of, or providing financing and services to a subsidiary that engages in a trade or business other than that of an FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE Holding Company - The Entity is a bank that by law or governement sanction is the main authority (other than the government in that jurisdiction) for issuing currency or its wholly owned entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE by reason of income or assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active CRS - NFE international organisation - the Entity is an international organisation, or an Entity that’s wholly owned by an international organisation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Address_Details__c</fullName>
        <inlineHelpText>Please give details of any properties other than the three above where you have lived in the past 3 years.</inlineHelpText>
        <label>Additional Address Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_employment_information__c</fullName>
        <label>Additional employment information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_information_about_fin_details__c</fullName>
        <label>Additional information about fin details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AffordabilityGrossAnnualIncome__c</fullName>
        <label>AffordabilityGrossAnnualIncome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Date_of_Birth__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_to_data_protection__c</fullName>
        <label>Agreed to data protection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_financed__c</fullName>
        <label>Amount financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_in_arrears__c</fullName>
        <label>Amount in arrears?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Cash__c</fullName>
        <label>Anticipated Cash</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Cash_amount__c</fullName>
        <label>Anticipated Cash amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_cash_frequency__c</fullName>
        <label>Anticipated cash frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_other_name_known_by_past_present__c</fullName>
        <label>Any other name known by - past/present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppliedMortgageElsewhere__c</fullName>
        <label>Have you applied for another mortgage?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apply_for_Online_Banking__c</fullName>
        <label>Do you wish to use online banking?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apply_for_Telephone_Banking__c</fullName>
        <label>Apply for Telephone Banking</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_happy_for_IBB_to_hold_your_data__c</fullName>
        <description>Confirms if the bank can hold the customers data</description>
        <label>Are you happy for us to hold your data?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_selling_an_existing_property__c</fullName>
        <label>Are you selling an existing property?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_ExistingProperty__c</fullName>
        <label>Are you selling an existing property?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_MortgageOutstanding__c</fullName>
        <label>How much is outstanding on mortgage?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_SellingPrice__c</fullName>
        <label>What is the selling price?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Properties__c</fullName>
        <label>BTL Properties</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Used for NPAA product select page</description>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masjid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_an_SPV__c</fullName>
        <description>For use with NPAA build</description>
        <label>Business an SPV</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_email_address__c</fullName>
        <label>Business email address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_or_Charity_Size__c</fullName>
        <inlineHelpText>For use with Single Customer View Extract. As per description of large &amp; small with companies house/charity commission.</inlineHelpText>
        <label>Business or Charity Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_property_value__c</fullName>
        <label>Business property value?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Prospects_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Allowance2__c</fullName>
        <label>Car Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Allowance__c</fullName>
        <label>Car Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Name__c</fullName>
        <label>Name to be printed on card</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Credit_and_Debits__c</fullName>
        <label>Cash Credit and Debits?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_lead_orginated__c</fullName>
        <label>Channel where lead identified</label>
        <picklist>
            <picklistValues>
                <fullName>Premier Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cheque_book_app_form__c</fullName>
        <formula>IF (Cheque_book_required__c , &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque book app form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_book_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque book required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cheque_book_required_formula__c</fullName>
        <formula>IF (Cheque_book_required__c , &quot;Y&quot; , &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque book required formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ant_credit_amount_per_month__c</fullName>
        <description>NPAA</description>
        <label>Company ant credit amount per month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_ant_debit_amount_per_month__c</fullName>
        <description>NPAA</description>
        <label>Company ant debit amount per month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_anticipated_turnover__c</fullName>
        <description>NPAA</description>
        <label>Company anticipated turnover</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_had_a_CCJ__c</fullName>
        <label>Company had a CCJ</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_had_a_property_reposessed__c</fullName>
        <description>NPAA</description>
        <label>Company had a property reposessed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_had_an_IVA__c</fullName>
        <description>NPAA</description>
        <label>Company had an IVA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_has_broken_any_credit_agreements__c</fullName>
        <description>NPAA</description>
        <label>Company has broken any credit agreements</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_By_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_By_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_By_Telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Details_Last_Update__c</fullName>
        <description>Last date the contact details were updated</description>
        <inlineHelpText>Date the last update of contact details was performed</inlineHelpText>
        <label>Contact Details Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_by_Email_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Marketing Cloud</description>
        <label>Contact by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_by_Newsletter_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Marketing Cloud</description>
        <label>Contact by Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_by_Post_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Marketing Cloud</description>
        <label>Contact by Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_by_Profiling_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Marketing Cloud</description>
        <label>Contact by Profiling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_by_SMS_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Marketing Cloud</description>
        <label>Contact by SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_by_Telephone_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Marketing Cloud</description>
        <label>Contact by Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_s_telephone_number__c</fullName>
        <label>Contact&apos;s telephone number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Converted Lead?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressCity__c</fullName>
        <label>CorrespondenceAddressCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressCountry__c</fullName>
        <label>CorrespondenceAddressCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressDistrict__c</fullName>
        <label>CorrespondenceAddressDistrict</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressPostCode__c</fullName>
        <label>CorrespondenceAddressPostCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressStreet__c</fullName>
        <label>CorrespondenceAddressStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryLiablePayTax__c</fullName>
        <label>CountryLiablePayTax</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Deps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Codes</description>
        <label>Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of birth</label>
        <picklist>
            <picklistValues>
                <fullName>(Not Specified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>